@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns:web="http://www.springframework.org/schema/web"
+	xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans.xsd http://www.springframework.org/schema/web http://www.springframework.org/schema/web/spring-web.xsd">
+
+	<web:urlmappings alwaysUseFullPath="true" urlDecode="true" lazyInitHandlers="true" order="1" defaultHandler="myController">
+		<web:urlmapping path="/index.html" ref="myController"/>
+		<web:interceptor ref="myInterceptor"/>
+		<web:interceptor ref="myInterceptor"/>
+	</web:urlmappings>
+	
+	<bean id="myController" class="org.springframework.web.servlet.config.WebNamespaceHandlerTests$MyController"/>
+	
+	<bean id="myInterceptor" class="org.springframework.web.servlet.config.WebNamespaceHandlerTests$MyInterceptor"/>
+
+
+</beans>
